--- a/Semana10/administrador/package.json
+++ b/Semana10/administrador/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
+    "firebase": "^9.3.0",
     "history": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
