--- a/Semana11/store/package.json
+++ b/Semana11/store/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "firebase": "^9.4.1",
     "history": "^5.1.0",
     "react": "^17.0.2",
