--- a/Semana11/store/package.json
+++ b/Semana11/store/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^10.0.0",
     "firebase": "^9.4.1",
     "history": "^5.1.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-image-magnify": "^2.7.4",
+    "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.1.10",
